--- a/src/.cccc/DataManager.html
+++ b/src/.cccc/DataManager.html
@@ -8,13 +8,13 @@ Detailed report on module DataManager
 <TR>
 <TH BGCOLOR="AQUA" WIDTH=70%>Metric</TH><TH BGCOLOR="AQUA" WIDTH=10%>Tag</TH><TH BGCOLOR="AQUA" WIDTH=10%>Overall</TH><TH BGCOLOR="AQUA" WIDTH=10%>Per Function</TH></TR>
 <TR>
-<TD>Lines of Code</TD><TD>LOC</TD><TD ALIGN=RIGHT>   201</TD><TD ALIGN=RIGHT>******</TD></TR>
+<TD>Lines of Code</TD><TD>LOC</TD><TD ALIGN=RIGHT>   203</TD><TD ALIGN=RIGHT>******</TD></TR>
 <TR>
 <TD>McCabe's Cyclomatic Number</TD><TD>MVG</TD><TD ALIGN=RIGHT>    26</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>******</STRONG></TD></TR>
 <TR>
 <TD>Lines of Comment</TD><TD>COM</TD><TD ALIGN=RIGHT>    63</TD><TD ALIGN=RIGHT BGCOLOR="RED"><STRONG>********</STRONG></TD></TR>
 <TR>
-<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 3.190</TD><TD>&nbsp;</TD></TR>
+<TD>LOC/COM</TD><TD>L_C</TD><TD ALIGN=RIGHT> 3.222</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>MVG/COM</TD><TD>M_C</TD><TD ALIGN=RIGHT> 0.413</TD><TD>&nbsp;</TD></TR>
 <TR>
@@ -26,7 +26,7 @@ Detailed report on module DataManager
 <TR>
 <TD>Number of Children</TD><TD>NOC</TD><TD ALIGN=RIGHT>     0</TD><TD>&nbsp;</TD></TR>
 <TR>
-<TD>Coupling between objects</TD><TD>CBO</TD><TD ALIGN=RIGHT>     4</TD><TD>&nbsp;</TD></TR>
+<TD>Coupling between objects</TD><TD>CBO</TD><TD ALIGN=RIGHT>     3</TD><TD>&nbsp;</TD></TR>
 <TR>
 <TD>Information Flow measure ( &nbsp;inclusive&nbsp;)</TD><TD>IF4</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>********</TD></TR>
 <TR>
@@ -50,61 +50,61 @@ definition &nbsp;
 <TR>
 <TD>getCurrentEmployee( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       126">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:126</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       127">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:127</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>getEmployee( &nbsp;string&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       177">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:177</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       178">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:178</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>readAttendanceRecord( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       150">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:150</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       151">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:151</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>    19</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     6</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>readLeaveApplication( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       207">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:207</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       208">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:208</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    47</EM></TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>    19</TD><TD ALIGN=RIGHT> 2.474</TD><TD ALIGN=RIGHT> 0.368</TD></TR>
 <TR>
 <TD>setEmployee( &nbsp;shared_ptr&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       118">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:118</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       119">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:119</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>     7</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     1</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>updateEmployees( &nbsp;&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:        79">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:79</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:        80">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:80</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>    24</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>     8</TD><TD ALIGN=RIGHT> 3.000</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>updateLeaveApplication( &nbsp;shared_ptr&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       274">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:274</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       275">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:275</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>    19</TD><TD ALIGN=RIGHT>     2</TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
 <TD>writeAttendanceRecord( &nbsp;AttendanceEntry&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       132">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:132</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       133">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:133</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>    14</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     3</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR>
-<TD>writeEmployee( &nbsp;Employee&nbsp;)<BR>
+<TD>writeEmployee( &nbsp;shared_ptr&nbsp;)<BR>
 definition &nbsp;
 <CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:        19">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:19</A></CODE><BR>
 <BR>
-</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    38</EM></TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT> 2.923</TD><TD ALIGN=RIGHT> 0.385</TD></TR>
+</TD><TD ALIGN=RIGHT BGCOLOR="YELLOW"><EM>    40</EM></TD><TD ALIGN=RIGHT>     5</TD><TD ALIGN=RIGHT>    13</TD><TD ALIGN=RIGHT> 3.077</TD><TD ALIGN=RIGHT> 0.385</TD></TR>
 <TR>
 <TD>writeLeaveApplication( &nbsp;shared_ptr&nbsp;)<BR>
 definition &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       187">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:187</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       188">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:188</A></CODE><BR>
 <BR>
 </TD><TD ALIGN=RIGHT>    15</TD><TD ALIGN=RIGHT>     0</TD><TD ALIGN=RIGHT>     4</TD><TD ALIGN=RIGHT>------</TD><TD ALIGN=RIGHT>------</TD></TR>
 <TR><TD HEIGHT=12 COLSPAN=6></TD></TR>
@@ -119,26 +119,23 @@ definition &nbsp;
 <TD WIDTH=50%>
 AttendanceEntry [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       132">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:132</A></CODE><BR>
-<BR>
-<BR>
-Employee [CV] <BR>
-pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:        19">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:19</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       133">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:133</A></CODE><BR>
 <BR>
 <BR>
 shared_ptr [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       118">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:118</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:        19">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:19</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       187">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:187</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       119">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:119</A></CODE><BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       274">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:274</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       188">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:188</A></CODE><BR>
+pass by value &nbsp;
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       275">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:275</A></CODE><BR>
 <BR>
 <BR>
 string [CV] <BR>
 pass by value &nbsp;
-<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       177">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:177</A></CODE><BR>
+<CODE><A HREF="cccc_src.html#C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:       178">C:\Users\nouma\Downloads\attendance_system\src\DataManager.cpp:178</A></CODE><BR>
 <BR>
 <BR>
 &nbsp;
